# rust-uploads

./: Cargo.toml  README.md
src/: main.rs
